# newsletter-service

./: Cargo.toml  config.yaml
.github/workflows/: general.yml
migrations/: 20230502114913_create_subscriptions_table.sql
scripts/: init_db.sh
src/: config.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
