[package]
name = "newsletter_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter_service"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.13"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
  "macros", 
  "runtime-tokio-rustls", 
  "postgres", 
  "uuid", 
  "migrate", 
  "chrono",
]

[dev-dependencies]
reqwest = "0.11"
